--- a/GesFormation/pom.xml
+++ b/GesFormation/pom.xml
@@ -63,11 +63,6 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.2</version>
 		</dependency>
-		<dependency>
-    			<groupId>org.sonarsource.scanner.maven</groupId>
-   			 <artifactId>sonar-maven-plugin</artifactId>
-  			  <version>3.2</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -76,6 +71,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+                		<groupId>org.sonarsource.scanner.maven</groupId>
+                		<artifactId>sonar-maven-plugin</artifactId>
+                		<version>3.4.0.905</version>
+            		</plugin>
 		</plugins>
 	</build>
 
